--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,10 +28,15 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.0
+  mobx: ^1.2.0 #gerenciador de estado
+  flutter_mobx: ^1.1.0 # gerenciador de estado
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+
+  build_runner: ^1.10.0
+  mobx_codegen: ^1.1.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
